syntax = "proto3";

package myservice.echo;

option go_package = "proto/echo";

service EchoService { rpc SendEcho(EchoRequest) returns (EchoResponse); }

message EchoRequest {
  string src = 1;
  string dest = 2;
  EchoRequestBody body = 3;
}

message EchoRequestBody {
  string type = 1;
  int32 msg_id = 2;
  string echo = 3;
}

message EchoResponse {
  string src = 1;
  string dest = 2;
  EchoResponseBody body = 3;
}

message EchoResponseBody {
  int32 msg_id = 1;
  int32 in_reply_to = 2;
  string type = 3;
  string echo = 4;
}
